<resources>
    <string name="app_name">Trabalho_final_v2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="vacinas">Vacinas</string>
    <string name="utentes">Utentes</string>
    <string name="covid_app">Covid APP</string>
    <string name="pfizer">Pfizer</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nova_vacina">Nova Vacina</string>
    <string name="editar_vacina">Editar Vacina</string>
    <string name="eliminar_vacina">Eliminar Vacina</string>
    <string name="novo_utente">novo_utente</string>
    <string name="editar_utente">editar utente</string>
    <string name="eliminar_utente">eliminar utente</string>
    <string name="nome">Nome</string>

    <string name="telefone">telefone</string>
    <string name="contribuinte">Contribuinte</string>
    <string name="dose">Dose</string>
    <string name="data_nascimento">data nascimento</string>
    <string name="menu_main">Menu Main</string>
    <string name="marca_es">Marcações</string>
    <string name="data_da_administra_o">Data da Administração</string>
    <string name="eliminar_marca_o">Eliminar Marcação</string>

</resources>