<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_adicionar_utentes"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/novo_utente"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_editar_utentes"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/editar_utente"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar_utentes"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/eliminar_utente"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_menu_main"
        android:orderInCategory="100"
        android:title="@string/menu_main"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>