<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NovaMarcacaoFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos"
        android:text="@string/utentes" />

    <Spinner
        android:id="@+id/spinnerUtentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_campos">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dose"
            android:inputType="textLongMessage|textPersonName|textAutoComplete" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_campos"
            android:text="@string/data_da_administra_o" />

    </com.google.android.material.textfield.TextInputLayout>

    <CalendarView
        android:id="@+id/calendarViewAdministracao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>